be.po: Updated Belarusian translation from Belarusian team <i18n@mova.org>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-15  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+
+	* be.po: Updated Belarusian translation
+	from Belarusian team <i18n@mova.org>.
+
 2005-02-14  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* fa.po: Updated Persian translation.
