Use correct term for Accelerator. Same
2005-02-15  Kjartan Maraas  <kmaraas@gnome.org>

	* nb.po: Use correct term for Accelerator.
	* no.po: Same

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,5 +1,10 @@
 2005-02-15  Kjartan Maraas  <kmaraas@gnome.org>
 
+	* nb.po: Use correct term for Accelerator.
+	* no.po: Same
+
+2005-02-15  Kjartan Maraas  <kmaraas@gnome.org>
+
 	* nb.po: Update
 	* no.po: Update
 
