--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-15  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Updated Slovak translation.
+
 2005-02-15  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Use correct term for Accelerator.
