Update English (British) translation.
2005-02-15  David Lodge  <dave@cirt.net>

	* en_GB.po: Update English (British) translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-15  David Lodge  <dave@cirt.net>
+
+	* en_GB.po: Update English (British) translation.
+
 2005-02-15  Dmitry G. Mastrukov  <dmitry@taurussoft.org>
 
 	* be.po: Updated Belarusian translation
