Updated Xhosa translation.
2005-02-16  Adi Attar  <aattar@cvs.gnome.org>

	* xh.po: Updated Xhosa translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-16  Adi Attar  <aattar@cvs.gnome.org>
+
+	* xh.po: Updated Xhosa translation
+
 2005-02-15  David Lodge  <dave@cirt.net>
 
 	* en_GB.po: Update English (British) translation.
