Updated Finnish translation.
2005-02-17  Tommi Vainikainen  <thv@iki.fi>

	* fi.po: Updated Finnish translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-17  Tommi Vainikainen  <thv@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2005-02-17  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
