--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-02-20  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk/x11/gdkdrawable-x11.c (_gdk_x11_have_render_with_trapezoids): 
+	Set have_render_with_trapezoids to GDK_YES when we have 
+	a new enough Render extension.  (#167965,Billy Biggs) 
+
 	* gdk/x11/gdkx.h: 
 	* gdk/x11/gdkdisplay-x11.c (gdk_x11_display_get_user_time_libgtk_only):
 	Add libgtk_only api to obtain the user_time of the display. 
