--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-21  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2005-02-17  Tommi Vainikainen  <thv@iki.fi>
 
 	* fi.po: Merged translations from 'gtk-2-4' branch.
