Updated Greek translation

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -2,6 +2,10 @@
 
 	* el.po: Updated Greek translation.
 
+2005-02-23  Simos Xenitellis  <simos@gnome.org>
+
+	* el.po: Updated Greek translation.
+
 2005-02-21  Nikos Charonitakis  <charosn@her.forthnet.gr>
 
 	* el.po: Updated Greek translation.
