--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-23  Simos Xenitellis  <simos@gnome.org>
+
+	* el.po: Updated Greek translation.
+
 2005-02-17  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
