Updated Arabic translation.
2005-02-24  Arafat Medini  <kinryu@silverpen.de>

	* ar.po: Updated Arabic translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-24  Arafat Medini  <kinryu@silverpen.de>
+
+	* ar.po: Updated Arabic translation.
+
 2005-02-23  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated Greek translation.
