--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-24  Arafat Medini  <kinryu@silverpen.de>
+
+	* ar.po: Updated Arabic translation.
+
 2005-02-23  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated Greek translation.
