Don't leak parent_path. (#168435, Morten Welinder)
2005-02-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_select_path):
	Don't leak parent_path.  (#168435, Morten Welinder)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-02-24  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_select_path): 
+	Don't leak parent_path.  (#168435, Morten Welinder)
+
 	* gtk/gtkcombobox.c: Consistently use gtk_tree_row_reference_valid().
 	(gtk_combo_box_model_row_deleted): Update the displayed row in 
 	the cell_view.  (#167842, Gustavo Carneiro)
