ankit@redhat.com * Updated Gujarati Translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-25  Ankit Patel <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2005-02-24  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated Greek translation.
