--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,10 @@
 2005-02-27  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/tmpl/gtktreeselection.sgml:
+	* gtk/tmpl/gtktreeview.sgml:
+	* gtk/tmpl/gtktreeviewcolumn.sgml: Fix typos
+	in see also lists.  (# 168698, Torsten Schoenfeld)
+
 	* gtk/tmpl/gtktreemodel.sgml: Fix stack vs heap 
 	confusion.  (#168690, Torsten Schoenfeld)
 
