--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-28  Matthias Clasen  <mclasen@redhat.com>
+
+	* NEWS: Updates.
+
 2005-02-27  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkaction.c (connect_proxy): Improve the handling
