Fix translations of our sole Q_() message.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-01  Matthias Clasen  <mclasen@redhat.com>
+
+	* *.po: Strip the prefix from the 
+	"progress bar label" message in many
+	translations. It is not supposed to be
+	translated.
+
 2005-02-28  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.3 ===
