--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-01  Josep Puigdemont  <josep@imatge-sintetica.com>
+
+	* ca.po: Updated Catalan translation
+
 2005-03-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.4 ===
