--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Mar  1 14:04:08 2005  Manish Singh  <yosh@gimp.org>
+
+	* gdk/x11/gdkproperty-x11.c (virtual_atom_check_init): Cast to avoid
+	const warnings on data structure seeding.
+
 2005-03-01  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.4 ===
