--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-02  Raphael Higino  <raphaelh@cvs.gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2004-12-03  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* nso.po: Updated Northern Sotho translation.
