--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
+2005-03-02  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: Bump version
+	
 Tue Mar  1 14:04:08 2005  Manish Singh  <yosh@gimp.org>
 
 	* gdk/x11/gdkproperty-x11.c (virtual_atom_check_init): Cast to avoid
 	const warnings on data structure seeding.
 
 2005-03-01  Matthias Clasen  <mclasen@redhat.com>
-
+		
 	* === Released 2.6.4 ===
 
 	* NEWS: Updates
