--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkwidget.c (gtk_widget_reparent_subwindows): 
+	Avoid warnings if gtk_widget_reparent() is called at
+	unusual times.  (#168966, Christian Persch)
+
 2005-03-02  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Bump version
