ankit@redhat.com * Updated Gujarati Translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-04  Ankit Patel <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2005-03-03  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
