--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-04  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2005-03-04  Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
