--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-04  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2005-03-04  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
