Updated Lithuanian translation by Gintautas Miliauskas.
2005-03-04  Žygimantas Beručka  <uid0@akl.lt>

        * lt.po: Updated Lithuanian translation by Gintautas Miliauskas.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-04  Žygimantas Beručka  <uid0@akl.lt>
+
+	* lt.po: Updated Lithuanian translation by Gintautas Miliauskas.
+
 2005-03-01  Josep Puigdemont  <josep@imatge-sintetica.com>
 
 	* ca.po: Updated Catalan translation
