--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-05  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2005-03-05  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
