--- a/po/ro.po
+++ b/po/ro.po
@@ -1,15 +1,15 @@
 # Romanian translation for gtk+
-# Copyright (C) 1999 - 2004 Free Software Foundation, Inc.
+# Copyright (C) 1999 - 2005 Free Software Foundation, Inc.
 # Dan Damian <dand@dnttm.ro>, 1999, 2000.
 # Marius Andreiana <marius galuna.ro>, 2001, 2002.
-# Mişu Moldovan <dumol@go.ro>, 2003, 2004.
+# Mişu Moldovan <dumol@go.ro>, 2003, 2004, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk-2-4\n"
+"Project-Id-Version: gtk-2-6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-03-01 11:34-0500\n"
-"PO-Revision-Date: 2004-08-28 17:04+0300\n"
+"POT-Creation-Date: 2005-03-02 20:54+0100\n"
+"PO-Revision-Date: 2005-03-02 23:32+0200\n"
 "Last-Translator: Mişu Moldovan <dumol@go.ro>\n"
 "Language-Team: Română <gnomero-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -193,7 +193,7 @@ msgstr "Imaginea BMP are datele din antet greşite"
 
 #: gdk-pixbuf/io-bmp.c:307
 msgid "Topdown BMP images cannot be compressed"
-msgstr ""
+msgstr "Imaginile BMP de tip „topdown” nu pot fi comprimate"
 
 #: gdk-pixbuf/io-bmp.c:1154
 msgid "The BMP image format"
@@ -218,9 +218,8 @@ msgid "Stack overflow"
 msgstr "Stivă supraîncărcată"
 
 #: gdk-pixbuf/io-gif.c:635
-#, fuzzy
 msgid "GIF image loader cannot understand this image."
-msgstr "Modulul de încărcare GIF nu poate prelucra această imagine."
+msgstr "Modulul de încărcare GIF nu înţelege această imagine."
 
 #: gdk-pixbuf/io-gif.c:664
 msgid "Bad code encountered"
@@ -460,11 +459,10 @@ msgid "Keys for PNG text chunks must be ASCII characters."
 msgstr "Fragmentele de text dintr-un PNG trebuie să fie caractere ASCII."
 
 #: gdk-pixbuf/io-png.c:854
-#, fuzzy, c-format
+#, c-format
 msgid "Value for PNG text chunk %s cannot be converted to ISO-8859-1 encoding."
-msgstr ""
-"Valoarea fragmentului de text PNG %s nu poate fi convertită la codarea ISO-"
-"8859-1."
+msgstr "Valoarea fragmentului de text PNG %s nu poate fi convertită la "
+"codarea ISO-8859-1."
 
 #: gdk-pixbuf/io-png.c:994
 msgid "The PNG image format"
@@ -499,7 +497,6 @@ msgid "Maximum color value in PNM file is too large"
 msgstr "Valoarea maximă a culorii în fişierul PNM este prea mare"
 
 #: gdk-pixbuf/io-pnm.c:399
-#, fuzzy
 msgid "Cannot handle PNM files with maximum color values greater than 255"
 msgstr "Nu pot manipula fişiere PNM cu valori maxime ale culorii peste 255"
 
@@ -524,7 +521,6 @@ msgid "Raw PNM formats require exactly one whitespace before sample data"
 msgstr "Formatele brute PNM cer exact un spaţiu gol înainte de datele eşantion"
 
 #: gdk-pixbuf/io-pnm.c:777
-#, fuzzy
 msgid "Cannot allocate memory for loading PNM image"
 msgstr "Nu pot aloca memorie pentru încărcarea imaginii PNM"
 
@@ -565,37 +561,30 @@ msgid "The Sun raster image format"
 msgstr "Formatul de imagine raster Sun"
 
 #: gdk-pixbuf/io-tga.c:159
-#, fuzzy
 msgid "Cannot allocate memory for IOBuffer struct"
 msgstr "Nu pot aloca memorie pentru structura IOBuffer"
 
 #: gdk-pixbuf/io-tga.c:178
-#, fuzzy
 msgid "Cannot allocate memory for IOBuffer data"
 msgstr "Nu pot aloca memorie pentru datele IOBuffer"
 
 #: gdk-pixbuf/io-tga.c:189
-#, fuzzy
 msgid "Cannot realloc IOBuffer data"
 msgstr "Nu pot realoca datele IOBuffer"
 
 #: gdk-pixbuf/io-tga.c:219
-#, fuzzy
 msgid "Cannot allocate temporary IOBuffer data"
 msgstr "Nu pot aloca datele temporare IOBuffer"
 
 #: gdk-pixbuf/io-tga.c:353
-#, fuzzy
 msgid "Cannot allocate new pixbuf"
 msgstr "Nu pot aloca un nou pixbuf"
 
 #: gdk-pixbuf/io-tga.c:692
-#, fuzzy
 msgid "Cannot allocate colormap structure"
 msgstr "Nu pot aloca structura hărţii de culoare"
 
 #: gdk-pixbuf/io-tga.c:699
-#, fuzzy
 msgid "Cannot allocate colormap entries"
 msgstr "Nu pot aloca intrările hărţii de culoare"
 
@@ -604,7 +593,6 @@ msgid "Unexpected bitdepth for colormap entries"
 msgstr "Adâncime de biţi neaşteptată pentru intrările hărţii de culoare"
 
 #: gdk-pixbuf/io-tga.c:739
-#, fuzzy
 msgid "Cannot allocate TGA header memory"
 msgstr "Nu pot aloca memorie pentru antetul TGA"
 
@@ -618,7 +606,6 @@ msgid "TGA image type not supported"
 msgstr "Tip de imagine TGA nesuportat"
 
 #: gdk-pixbuf/io-tga.c:861
-#, fuzzy
 msgid "Cannot allocate memory for TGA context struct"
 msgstr "Nu pot aloca memorie pentru structura contextului TGA"
 
@@ -728,14 +715,12 @@ msgid "XPM file has invalid number of colors"
 msgstr "Fişierul XPM are un număr invalid de culori"
 
 #: gdk-pixbuf/io-xpm.c:1272 gdk-pixbuf/io-xpm.c:1281 gdk-pixbuf/io-xpm.c:1333
-#, fuzzy
 msgid "Cannot allocate memory for loading XPM image"
 msgstr "Nu am reuşit să aloc memorie pentru încărcarea imaginii XPM"
 
 #: gdk-pixbuf/io-xpm.c:1295
-#, fuzzy
 msgid "Cannot read XPM colormap"
-msgstr "Nu am putut citi harta de culoare XPM"
+msgstr "Nu am reuşit să citesc harta de culoare XPM"
 
 #: gdk-pixbuf/io-xpm.c:1524
 msgid "Failed to write to temporary file when loading XPM image"
@@ -748,48 +733,47 @@ msgstr "Formatul de imagine XPM"
 #. Description of --class=CLASS in --help output
 #: gdk/gdk.c:115
 msgid "Program class as used by the window manager"
-msgstr ""
+msgstr "Clasa programului, precum în administratorul de ferestre"
 
 #. Placeholder in --class=CLASS in --help output
 #: gdk/gdk.c:116
 msgid "CLASS"
-msgstr ""
+msgstr "CLASĂ"
 
 #. Description of --name=NAME in --help output
 #: gdk/gdk.c:118
 msgid "Program name as used by the window manager"
-msgstr ""
+msgstr "Numele programului, precum în administratorul de ferestre"
 
 #. Placeholder in --name=NAME in --help output
 #: gdk/gdk.c:119
 msgid "NAME"
-msgstr ""
+msgstr "NUME"
 
 #. Description of --display=DISPLAY in --help output
 #: gdk/gdk.c:121
 msgid "X display to use"
-msgstr ""
+msgstr "Display X de utilizat"
 
 #. Placeholder in --display=DISPLAY in --help output
 #: gdk/gdk.c:122
-#, fuzzy
 msgid "DISPLAY"
-msgstr "IPA"
+msgstr "DISPLAY"
 
 #. Description of --screen=SCREEN in --help output
 #: gdk/gdk.c:124
 msgid "X screen to use"
-msgstr ""
+msgstr "Ecran X de utilizat"
 
 #. Placeholder in --screen=SCREEN in --help output
 #: gdk/gdk.c:125
 msgid "SCREEN"
-msgstr ""
+msgstr "ECRAN"
 
 #. Description of --gdk-debug=FLAGS in --help output
 #: gdk/gdk.c:128
 msgid "Gdk debugging flags to set"
-msgstr ""
+msgstr "Flag-uri de depanare Gdk de setat"
 
 #. Placeholder in --gdk-debug=FLAGS in --help output
 #. Placeholder in --gdk-no-debug=FLAGS in --help output
@@ -797,90 +781,90 @@ msgstr ""
 #. Placeholder in --gtk-no-debug=FLAGS in --help output
 #: gdk/gdk.c:129 gdk/gdk.c:132 gtk/gtkmain.c:405 gtk/gtkmain.c:408
 msgid "FLAGS"
-msgstr ""
+msgstr "FLAGS"
 
 #. Description of --gdk-no-debug=FLAGS in --help output
 #: gdk/gdk.c:131
 msgid "Gdk debugging flags to unset"
-msgstr ""
+msgstr "Flag-uri de depanare Gdk de resetat"
 
 #. Description of --sync in --help output
 #: gdk/win32/gdkmain-win32.c:60
 msgid "Don't batch GDI requests"
-msgstr ""
+msgstr "Nu grupa cererile GDI"
 
 #. Description of --no-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:62
 msgid "Don't use the Wintab API for tablet support"
-msgstr ""
+msgstr "Nu utiliza interfaţa Wintab pentru suportul dispozitivelo „tablet”"
 
 #. Description of --ignore-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:64
 msgid "Same as --no-wintab"
-msgstr ""
+msgstr "Precum --no-wintab"
 
 #. Description of --use-wintab in --help output
 #: gdk/win32/gdkmain-win32.c:66
 msgid "Do use the Wintab API [default]"
-msgstr ""
+msgstr "Utilizează interfaţa Wintab (implicit)"
 
 #. Description of --max-colors=COLORS in --help output
 #: gdk/win32/gdkmain-win32.c:68
 msgid "Size of the palette in 8 bit mode"
-msgstr ""
+msgstr "Mărimea paletei în modul pe 8 biţi"
 
 #. Placeholder in --max-colors=COLORS in --help output
 #: gdk/win32/gdkmain-win32.c:69
 msgid "COLORS"
-msgstr ""
+msgstr "CULORI"
 
 #. Description of --sync in --help output
 #: gdk/x11/gdkmain-x11.c:92
 msgid "Make X calls synchronous"
-msgstr ""
+msgstr "Fă cereri X sincrone"
 
 #: gtk/gtkaboutdialog.c:270 gtk/gtkaboutdialog.c:2023
 msgid "License"
-msgstr ""
+msgstr "Licenţă"
 
 #: gtk/gtkaboutdialog.c:271
 msgid "The license of the program"
-msgstr ""
+msgstr "Licenţa programului"
 
 #. Add the credits button
 #: gtk/gtkaboutdialog.c:491
 msgid "_Credits"
-msgstr ""
+msgstr "Aut_ori"
 
 #. Add the license button
 #: gtk/gtkaboutdialog.c:500
 msgid "_License"
-msgstr ""
+msgstr "_Licenţă"
 
 #: gtk/gtkaboutdialog.c:729
 #, c-format
 msgid "About %s"
-msgstr ""
+msgstr "Despre %s"
 
 #: gtk/gtkaboutdialog.c:1951
 msgid "Credits"
-msgstr ""
+msgstr "Autori"
 
 #: gtk/gtkaboutdialog.c:1977
 msgid "Written by"
-msgstr ""
+msgstr "Scris de "
 
 #: gtk/gtkaboutdialog.c:1980
 msgid "Documented by"
-msgstr ""
+msgstr "Documentat de "
 
 #: gtk/gtkaboutdialog.c:1992
 msgid "Translated by"
-msgstr ""
+msgstr "Tradus de"
 
 #: gtk/gtkaboutdialog.c:1996
 msgid "Artwork by"
-msgstr ""
+msgstr "Interfaţă de"
 
 #. This is the text that should appear next to menu accelerators
 #. * that use the shift key. If the text on this key isn't typically
@@ -933,7 +917,7 @@ msgstr "calendar:week_start:1"
 #: gtk/gtkcellrendererprogress.c:235 gtk/gtkcellrendererprogress.c:293
 #, c-format
 msgid "progress bar label|%d %%"
-msgstr ""
+msgstr "%d %%"
 
 #: gtk/gtkcolorbutton.c:220 gtk/gtkcolorbutton.c:574
 msgid "Pick a Color"
@@ -1089,9 +1073,8 @@ msgid "Invalid filename: %s"
 msgstr "Nume invalid de fişier: %s"
 
 #: gtk/gtkfilechooserbutton.c:65
-#, fuzzy
 msgid "Select A File"
-msgstr "Şterge fişierul"
+msgstr "Selectaţi un fişier"
 
 #: gtk/gtkfilechooserbutton.c:66 gtk/gtkfilechooserdefault.c:1283
 #: gtk/gtkpathbar.c:986
@@ -1104,77 +1087,65 @@ msgid "Desktop"
 msgstr "Desktop"
 
 #: gtk/gtkfilechooserbutton.c:68
-#, fuzzy
 msgid "(None)"
-msgstr "niciunul"
+msgstr "(Niciunul)"
 
 #: gtk/gtkfilechooserbutton.c:1515
 msgid "Other..."
-msgstr ""
+msgstr "Altul..."
 
 #: gtk/gtkfilechooserdefault.c:914
-#, fuzzy
 msgid "Could not retrieve information about the file"
-msgstr ""
-"Nu am obţinut informaţii despre %s:\n"
-"%s"
+msgstr "Nu am reuşit să obţin informaţii despre fişier"
 
 #: gtk/gtkfilechooserdefault.c:925
-#, fuzzy
 msgid "Could not add a bookmark"
-msgstr ""
-"Nu am putut adăuga un favorit pentru %s:\n"
-"%s"
+msgstr "Nu am reuşit să adaug favoritul"
 
 #: gtk/gtkfilechooserdefault.c:936
-#, fuzzy
 msgid "Could not remove bookmark"
-msgstr ""
-"Nu am putut şterge favoritul %s:\n"
-"%s"
+msgstr "Nu am reuşit să şterg favoritul"
 
 #: gtk/gtkfilechooserdefault.c:947
 msgid "The folder could not be created"
-msgstr ""
+msgstr "Directorul nu a putut fi recreat"
 
 #: gtk/gtkfilechooserdefault.c:958
-#, fuzzy
 msgid "Invalid file name"
-msgstr "Nume invalid de fişier: %s"
+msgstr "Nume invalid de fişier"
 
 #: gtk/gtkfilechooserdefault.c:968
 msgid "The folder contents could not be displayed"
-msgstr ""
+msgstr "Conţinutul directorului nu a putut fi afişat"
 
 #: gtk/gtkfilechooserdefault.c:1173
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get information about '%s': %s"
-msgstr ""
-"Nu am obţinut informaţii despre %s:\n"
-"%s"
+msgstr "Nu am reuşit să obţin informaţii despre „%s”: %s"
 
 #: gtk/gtkfilechooserdefault.c:2199
 #, c-format
 msgid "Add the folder '%s' to the bookmarks"
-msgstr ""
+msgstr "Adaugă directorul „%s” la favorite"
 
 #: gtk/gtkfilechooserdefault.c:2240
 msgid "Add the current folder to the bookmarks"
-msgstr ""
+msgstr "Adaugă directorul „%s” la favorite"
 
 #: gtk/gtkfilechooserdefault.c:2242
 msgid "Add the selected folders to the bookmarks"
-msgstr ""
+msgstr "Adaugă directoarele selectate la favorite"
 
 #: gtk/gtkfilechooserdefault.c:2282
 #, c-format
 msgid "Remove the bookmark '%s'"
-msgstr ""
+msgstr "Şterge favoritul „%s”"
 
 #: gtk/gtkfilechooserdefault.c:2695
-#, fuzzy, c-format
+#, c-format
 msgid "Could not add a bookmark for '%s' because it is an invalid path name."
-msgstr "Nu am putut adăuga un favorit pentru %s deoarece are o cale invalidă."
+msgstr ""
+"Nu am reuşit să adăug un favorit pentru „%s” deoarece are o cale invalidă."
 
 #: gtk/gtkfilechooserdefault.c:2873
 msgid "Shortcuts"
@@ -1190,7 +1161,7 @@ msgstr "A_daugă"
 
 #: gtk/gtkfilechooserdefault.c:2986
 msgid "Add the selected folder to the bookmarks"
-msgstr ""
+msgstr "Adaugă directorul selectat la favorite"
 
 #: gtk/gtkfilechooserdefault.c:2991 gtk/gtkstock.c:352
 msgid "_Remove"
@@ -1198,17 +1169,15 @@ msgstr "_Elimină"
 
 #: gtk/gtkfilechooserdefault.c:2998
 msgid "Remove the selected bookmark"
-msgstr ""
+msgstr "Şterge favoritul selectat"
 
 #: gtk/gtkfilechooserdefault.c:3101
-#, fuzzy
 msgid "_Add to Shortcuts"
-msgstr "Scurtături"
+msgstr "_Adaugă la combinaţiile de taste"
 
 #: gtk/gtkfilechooserdefault.c:3111
-#, fuzzy
 msgid "Open _Location"
-msgstr "Deschide locaţia"
+msgstr "Deschide _locaţia"
 
 #: gtk/gtkfilechooserdefault.c:3123
 msgid "Show _Hidden Files"
@@ -1232,7 +1201,7 @@ msgstr "Modificat"
 
 #: gtk/gtkfilechooserdefault.c:3348
 msgid "Select which types of files are shown"
-msgstr ""
+msgstr "Selectaţi ce tipuri de fişiere să fie afişate"
 
 #. Create Folder
 #: gtk/gtkfilechooserdefault.c:3384
@@ -1257,21 +1226,18 @@ msgid "Create in _folder:"
 msgstr "Creează în _director:"
 
 #: gtk/gtkfilechooserdefault.c:4737
-#, fuzzy
 msgid "Cannot change to folder because it is not local"
-msgstr "Nu pot schimba în directorul specificat deoarece nu este local"
+msgstr "Nu pot deschide directorul deoarece nu este local"
 
 #: gtk/gtkfilechooserdefault.c:5253
-#, fuzzy, c-format
+#, c-format
 msgid "Shortcut %s does not exist"
-msgstr "combinaţia de taste %s nu există"
+msgstr "Combinaţia de taste %s nu există"
 
 #: gtk/gtkfilechooserdefault.c:5717
-#, fuzzy, c-format
+#, c-format
 msgid "Could not mount %s"
-msgstr ""
-"Nu am putut selecta %s:\n"
-"%s"
+msgstr "Nu am reuşit să montez %s"
 
 #: gtk/gtkfilechooserdefault.c:6010
 msgid "Type name of new folder"
@@ -1312,28 +1278,21 @@ msgid "Unknown"
 msgstr "Nu se ştie"
 
 #: gtk/gtkfilechooserdefault.c:6193
-#, fuzzy
 msgid "Cannot change folder"
-msgstr "Creează în _director:"
+msgstr "Nu pot schimba directorul"
 
 #: gtk/gtkfilechooserdefault.c:6194
-#, fuzzy
 msgid "The folder you specified is an invalid path."
-msgstr "Nu pot schimba în directorul specificat deoarece este o cale invalidă."
+msgstr "Directorul specificat este o cale invalidă."
 
 #: gtk/gtkfilechooserdefault.c:6233
-#, fuzzy, c-format
+#, c-format
 msgid "Could not build file name from '%s' and '%s'"
-msgstr ""
-"Nu am putut construi un nume de fişier din „%s” şi „%s”:\n"
-"%s"
+msgstr "Nu am putut construi un nume de fişier din „%s” şi „%s”"
 
 #: gtk/gtkfilechooserdefault.c:6269
-#, fuzzy
 msgid "Could not select item"
-msgstr ""
-"Nu am putut selecta %s:\n"
-"%s"
+msgstr "Nu am putut selecta itemul"
 
 #: gtk/gtkfilechooserdefault.c:6309
 msgid "Open Location"
@@ -1531,14 +1490,14 @@ msgstr "(Gol)"
 #: gtk/gtkfilesystemunix.c:440 gtk/gtkfilesystemunix.c:632
 #: gtk/gtkfilesystemunix.c:1739 gtk/gtkfilesystemwin32.c:482
 #: gtk/gtkfilesystemwin32.c:495 gtk/gtkfilesystemwin32.c:1533
-#, fuzzy, c-format
+#, c-format
 msgid "Error getting information for '%s': %s"
-msgstr "eroare la obţinerea detalilor despre „%s”: %s"
+msgstr "Eroare la obţinerea detaliilor despre „%s”: %s"
 
 #: gtk/gtkfilesystemunix.c:501 gtk/gtkfilesystemwin32.c:537
-#, fuzzy, c-format
+#, c-format
 msgid "Error creating directory '%s': %s"
-msgstr "eroare la crearea directorului „%s”: %s"
+msgstr "Eroare la crearea directorului „%s”: %s"
 
 #: gtk/gtkfilesystemunix.c:581 gtk/gtkfilesystemwin32.c:597
 msgid "This file system does not support mounting"
@@ -1563,24 +1522,24 @@ msgstr ""
 "utilizaţi un nume diferit."
 
 #: gtk/gtkfilesystemunix.c:1446 gtk/gtkfilesystemwin32.c:1007
-#, fuzzy, c-format
+#, c-format
 msgid "Bookmark saving failed: %s"
-msgstr "Salvarea favoritului a eşuat (%s)"
+msgstr "Salvarea favoritului a eşuat: %s"
 
 #: gtk/gtkfilesystemunix.c:1498
 #, c-format
 msgid "'%s' already exists in the bookmarks list"
-msgstr ""
+msgstr "„%s” există deja în lista favoritelor"
 
 #: gtk/gtkfilesystemunix.c:1560
 #, c-format
 msgid "'%s' does not exist in the bookmarks list"
-msgstr ""
+msgstr "„%s” nu există în lista favoritelor"
 
 #: gtk/gtkfilesystemunix.c:1699
-#, fuzzy, c-format
+#, c-format
 msgid "Error getting information for '/': %s"
-msgstr "eroare la obţinerea detalilor despre „%s”: %s"
+msgstr "Eroare la obţinerea detaliilor despre „/”: %s"
 
 #: gtk/gtkfontbutton.c:178 gtk/gtkfontbutton.c:295
 msgid "Pick a Font"
@@ -1744,27 +1703,27 @@ msgstr "Selectează tot"
 #. Description of --gtk-module=MODULES in --help output
 #: gtk/gtkmain.c:398
 msgid "Load additional GTK+ modules"
-msgstr ""
+msgstr "Încarcă alte module GTK+"
 
 #. Placeholder in --gtk-module=MODULES in --help output
 #: gtk/gtkmain.c:399
 msgid "MODULES"
-msgstr ""
+msgstr "MODULE"
 
 #. Description of --g-fatal-warnings in --help output
 #: gtk/gtkmain.c:401
 msgid "Make all warnings fatal"
-msgstr ""
+msgstr "Orice atenţionare e fatală"
 
 #. Description of --gtk-debug=FLAGS in --help output
 #: gtk/gtkmain.c:404
 msgid "GTK+ debugging flags to set"
-msgstr ""
+msgstr "Flag-urile de depanare GTK+ sunt setate"
 
 #. Description of --gtk-no-debug=FLAGS in --help output
 #: gtk/gtkmain.c:407
 msgid "GTK+ debugging flags to unset"
-msgstr ""
+msgstr "Flag-urile de depanare GTK+ sunt nesetate"
 
 #. Translate to default:RTL if you want your widgets
 #. * to be RTL, otherwise translate to default:LTR.
@@ -1777,11 +1736,11 @@ msgstr "default:LTR"
 
 #: gtk/gtkmain.c:565
 msgid "GTK+ Options"
-msgstr ""
+msgstr "Opţiuni GTK+"
 
 #: gtk/gtkmain.c:565
 msgid "Show GTK+ Options"
-msgstr ""
+msgstr "Arată opţiunile GTK+"
 
 #: gtk/gtknotebook.c:2712 gtk/gtknotebook.c:5060
 #, c-format
@@ -1833,7 +1792,7 @@ msgstr "Întrebare"
 #.
 #: gtk/gtkstock.c:294
 msgid "_About"
-msgstr ""
+msgstr "_Despre"
 
 #: gtk/gtkstock.c:296
 msgid "_Apply"
@@ -1880,9 +1839,8 @@ msgid "_Execute"
 msgstr "E_xecută"
 
 #: gtk/gtkstock.c:307
-#, fuzzy
 msgid "_Edit"
-msgstr "_Ieşire"
+msgstr "_Editare"
 
 #: gtk/gtkstock.c:308
 msgid "_Find"
@@ -1977,32 +1935,28 @@ msgid "_Right"
 msgstr "_Dreapta"
 
 #: gtk/gtkstock.c:332
-#, fuzzy
 msgid "_Next"
-msgstr "_Nou"
+msgstr "Înaint_e"
 
 #: gtk/gtkstock.c:333
-#, fuzzy
 msgid "P_ause"
-msgstr "_Lipeşte"
+msgstr "P_auză"
 
 #: gtk/gtkstock.c:334
 msgid "_Play"
-msgstr ""
+msgstr "_Redă"
 
 #: gtk/gtkstock.c:335
 msgid "Pre_vious"
-msgstr ""
+msgstr "Înapo_i"
 
 #: gtk/gtkstock.c:336
-#, fuzzy
 msgid "_Record"
-msgstr "Re_fă"
+msgstr "Înregistrea_ză"
 
 #: gtk/gtkstock.c:337
-#, fuzzy
 msgid "R_ewind"
-msgstr "C_aută"
+msgstr "Î_napoi"
 
 #: gtk/gtkstock.c:338 gtk/gtkstock.c:361
 msgid "_Stop"
@@ -2213,7 +2167,6 @@ msgstr "Chirilică (Transpusă)"
 
 #. ID
 #: modules/input/iminuktitut.c:127
-#, fuzzy
 msgid "Inuktitut (Transliterated)"
 msgstr "Inukitut (Transpusă)"
 
@@ -2252,35 +2205,3 @@ msgstr "Metodă de intrare X"
 msgid "Could not get information for file '%s': %s"
 msgstr "Nu putut obţine detalii despre fişierul „%s”: %s"
 
-#, fuzzy
-#~ msgid "Error getting information for '%s'"
-#~ msgstr "eroare la obţinerea detalilor despre „%s”"
-
-#~ msgid ""
-#~ "Could not change the current folder to %s:\n"
-#~ "%s"
-#~ msgstr ""
-#~ "Nu am reuşit să schimb directorul curent în %s:\n"
-#~ "%s"
-
-#~ msgid ""
-#~ "Could not create folder %s:\n"
-#~ "%s"
-#~ msgstr ""
-#~ "Nu am putut crea directorul „%s”:\n"
-#~ "%s"
-
-#~ msgid "Could not add bookmark for %s because it is not a folder."
-#~ msgstr "Nu am putut adăuga un favorit pentru %s deoarece nu e un director."
-
-#~ msgid "%s: %s"
-#~ msgstr "%s: %s"
-
-#~ msgid "This file system does not support icons for everything"
-#~ msgstr "Acest sistem de fişiere nu suportă iconiţe pentru tot"
-
-#~ msgid "Could not find the path"
-#~ msgstr "Nu am reuşit să găsesc calea"
-
-#~ msgid "Input Methods"
-#~ msgstr "Metode de intrare"
