--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-05  Pauli Virtanen <pauli.virtanen@hut.fi>
+
+	 * fi.po: Updated Finnish translation.
+
 2005-03-05  Dan Damian  <dand@gnome.ro>
 
 	* ro.po: Updated Romanian translation by
