--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-06  Dan Damian  <dand@gnome.ro>
+
+	* ro.po: Updated Romanian translation by
+	Mişu Moldovan <dumol@go.ro>.
+
 2005-03-05  Pauli Virtanen <pauli.virtanen@hut.fi>
 
 	 * fi.po: Updated Finnish translation.
