--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-07  Frank Arnold  <farnold@cvs.gnome.org>
+
+	* de.po: Updated German translation.
+
 2005-03-06  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
