--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-08  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf-core.h: Use G_GNUC_NULL_TERMINATED where
+	appropriate.  (#165682, Marc Meissner)
+
 2005-03-07  Matthias Clasen  <mclasen@redhat.com>
 
 	* io-xpm.c: Use a generated table of offsets
