--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-08  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-03-07  Frank Arnold  <farnold@cvs.gnome.org>
 
 	* de.po: Updated German translation.
