--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,5 +1,8 @@
 2005-03-08  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk-pixbuf.c (gdk_pixbuf_class_init): Use canonical
+	form of the name when registering properties. 
+
 	* gdk-pixbuf.symbols: Add the new attributes here, too.
 	
 	* gdk-pixbuf-core.h: Use G_GNUC_NULL_TERMINATED where
